kubernetes/base/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-web
  namespace: front-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-web
  template:
    metadata:
      labels:
        app: front-web
    spec:
      containers:
        - name: front-web
          image: gabrieldela/front-web:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
            requests:
              cpu: "200m"
      restartPolicy: Always
