kubernetes/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-web
  namespace: front-web
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 3000
  selector:
    app: front-web
status:
  loadBalancer: {}
